--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <div id="info" class="container" >
 
     <div id="course_info" class="row one-top" >
-      <h2>NTUA ARCH 4342 Computational Methods in Creative Arts and Sciences </h2>
+      <h2>ARMAND LALA</h2>
     </div>
 
     <div id="student_info" class="row half-bottom" >
-      <h3>Armand Lala</h3>
+      <h3>NTUA ARCH 4342 Computational Methods in Creative Arts and Sciences</h3>
       <p>I am undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. I like to do X, Y, Z. Have a look at my projects. </p>
     </div>
 
