--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 </head>
 <body>
 
-  <div id="info" class="container" >
-
-    <div id="course_info" class="row one-top" >
-      <h2 class="center">ARMAND LALA</h2>
-    </div>
+  <div id="info" class="container center">
+  <div id="logo_area" class="row">
+    <img src="images/logo-2-512x512.png" alt="Logo AL" style="width:110px; margin-bottom: 18px; margin-top:10px;">
+  </div>
+  <div id="course_info" class="row one-top">
+    <h2 class="center">ARMAND LALA</h2>
+  </div>
 
     <div id="student_info" class="row half-bottom" >
       <h3 class="center">NTUA ARCH 4342 Computational Methods in Creative Arts and Sciences</h3>
