--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="logo_area" class="row">
     <img src="images/logo-2-512x512.png" alt="Logo AL" style="width:110px; margin-bottom: 18px; margin-top:10px;">
   </div>
-  <div id="course_info" class="row one-top">
+  <div id="course_info" class="row">
     <h2 class="center">ARMAND LALA</h2>
   </div>
 
