--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
 </head>
 <body>
 
+  <!-- NAVBAR START -->
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="index.html" class="navbar-home" title="Home">
+      <!-- Casetta in SVG: puoi cambiare la dimensione (width/height) -->
+      <svg width="24" height="24" fill="white" viewBox="0 0 24 24" style="vertical-align: middle;">
+        <path d="M3 11l9-9 9 9h-2v8a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-8H3z" stroke="white" stroke-width="2" fill="none"/>
+      </svg>
+    </a>
+  </div>
+  <div class="navbar-right">
+    <a href="#about">ABOUT</a>
+    <a href="#contacts">CONTACTS</a>
+    <a href="#projects">PROJECTS</a>
+  </div>
+</nav>
+<!-- NAVBAR END -->
+
+
   <div id="info" class="container center">
   <div id="logo_area" class="row">
     <img src="images/logo-2-512x512.png" alt="Logo AL" style="width:110px; margin-bottom: 4px; margin-top:2px;">
