--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
   <div id="projects" class="container" >
-  <h3 class="half-bottom center">Projects</h3>
+  <h3 class="half-bottom center">PROJECTS</h3>
 
   <div class="row half-bottom">
     <!-- Colonna 1 -->
