--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div id="student_info" class="row half-bottom" >
       <h3 class="center">NTUA ARCH 4342 Computational Methods in Creative Arts and Sciences</h3>
-      <p class="center">I am undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. I like to do X, Y, Z. Have a look at my projects. </p>
+      <p class="center">I am undergrad student at NTUA School of Architecture. This is my website for ARCH 4342 Computational Methods in Creative Arts and Sciences. Have a look at my projects. </p>
     </div>
 
   </div>
