--- a/project1.html
+++ b/project1.html
@@ -29,18 +29,23 @@
 </nav>
 <!-- NAVBAR END -->
 
-<!-- MAIN PROJECT CARD -->
-<div class="container center" style="margin-top:100px; max-width:700px;">
-  <h2 style="margin-bottom:12px;">Blue Project</h2>
-  <img src="images/blue.png" alt="Blue Project" style="max-width:180px; border-radius:10px; margin-bottom:20px;">
-  <p style="font-size:1.1em;">
-    Qui puoi scrivere una descrizione dettagliata del progetto Blue.<br>
-    Aggiungi immagini, testo, link, o tutto ciò che vuoi.
-  </p>
-</div>
+<!-- ANIMATED BACKGROUND (uguale alla home) -->
+<script src="js/p5.js"></script>
+<script src="js/p5.sound.min.js"></script>
+<script src="js/mold.js"></script>
+<script src="js/sketch.js"></script>
 
-<div class="container center" style="max-width:700px;">
-  <a href="index.html" style="font-size:1.05em; color:#fff; text-decoration:underline; opacity:0.77;">&#8592; Torna alla Home</a>
+<!-- MAIN PROJECT CONTAINER (stile .container) -->
+<div class="container center" style="margin-top:100px; min-height: 400px; max-width: 760px;">
+  <h2 style="margin-bottom:24px;">Blue Project</h2>
+  <div class="project-card" style="margin: 0 auto; max-width: 360px;">
+    <img src="images/blue.png" alt="Blue Project" style="max-width:180px; border-radius:10px; margin-bottom:18px;">
+    <h5>Blue Project</h5>
+    <p style="margin:18px 0 0 0; font-size:1.09em;">
+      Qui puoi scrivere una descrizione dettagliata del Blue Project.<br>
+      Aggiungi testo, immagini, quello che vuoi!
+    </p>
+  </div>
 </div>
 
 </body>
