--- a/project1.html
+++ b/project1.html
@@ -58,5 +58,12 @@
       </p>
     </div>
   </div>
+
+  <!-- *** AGGIUNGI QUESTO PRIMA DI </body> PER LO SFONDO ANIMATO *** -->
+  <script src="js/p5.js"></script>
+  <script src="js/p5.sound.min.js"></script>
+  <script src="js/mold.js"></script>
+  <script src="js/sketch.js"></script>
 </body>
 </html>
+
