--- a/project1.html
+++ b/project1.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta charset="utf-8"> 
-  <title>Blue Project | A L</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/customize.css">
-</head>
 <body>
-  <!-- NAVBAR START -->
+  <!-- NAVBAR UGUALE -->
   <nav class="navbar">
     <div class="navbar-left">
       <a href="index.html" class="navbar-home" title="Home">
@@ -26,22 +14,19 @@
       <a href="#projects">PROJECTS</a>
     </div>
   </nav>
-  <!-- NAVBAR END -->
 
-  <div class="container project-top" style="margin-bottom: 36px;">
-    <h1 class="center">Blue Project</h1>
-    <div class="glass-row">
-      <!-- IMMAGINE GRANDE, CON ICONE IN ALTO A DESTRA -->
-      <div class="project-img-box">
-        <img src="images/blue.png" alt="Blue Project" class="big-project-img">
-        <div class="project-icons">
-          <!-- Icona JS (link a progetto JS) -->
+  <div class="project-glass-wrapper">
+
+    <!-- Blocco 1: copertina -->
+    <div class="glass-box">
+      <h1>Blue Project</h1>
+      <div class="cover-row">
+        <img src="images/blue.png" alt="Blue Project" class="cover-img">
+        <div class="cover-icons">
           <a href="LINK_AL_JS" target="_blank" title="Vai al progetto JS" class="icon-btn">
             <span class="icon-js">JS*</span>
           </a>
-          <!-- Icona PDF -->
           <a href="docs/blue-project.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
-            <!-- icona documento stilizzata SVG -->
             <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
               <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
               <path d="M8 6h4M8 10h4M8 14h4"/>
@@ -50,20 +35,31 @@
         </div>
       </div>
     </div>
-    <!-- TESTO SOTTO, CON SFONDO GLASS -->
-    <div class="glass-desc">
-      <p class="center">
+
+    <!-- Blocco 2: descrizione -->
+    <div class="glass-box">
+      <p>
         Qui puoi scrivere una descrizione dettagliata del Blue Project.<br>
         Aggiungi testo, immagini, quello che vuoi!
       </p>
     </div>
+
+    <!-- Blocco 3: galleria immagini -->
+    <div class="glass-box">
+      <h3>Galleria</h3>
+      <div class="gallery-row">
+        <img src="images/img1.png" alt="img1">
+        <img src="images/img2.png" alt="img2">
+        <!-- aggiungi altre immagini qui -->
+      </div>
+    </div>
+
   </div>
 
-  <!-- *** AGGIUNGI QUESTO PRIMA DI </body> PER LO SFONDO ANIMATO *** -->
+  <!-- SFONDO ANIMATO -->
   <script src="js/p5.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/mold.js"></script>
   <script src="js/sketch.js"></script>
 </body>
-</html>
 
