--- a/project1.html
+++ b/project1.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8"> 
+  <title>Blue Project | A L</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/customize.css">
+</head>
 <body>
-  <!-- NAVBAR UGUALE -->
+  <!-- NAVBAR -->
   <nav class="navbar">
     <div class="navbar-left">
       <a href="index.html" class="navbar-home" title="Home">
@@ -14,10 +26,9 @@
       <a href="#projects">PROJECTS</a>
     </div>
   </nav>
-
+  
   <div class="project-glass-wrapper">
-
-    <!-- Blocco 1: copertina -->
+    <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
       <h1>Blue Project</h1>
       <div class="cover-row">
@@ -35,31 +46,29 @@
         </div>
       </div>
     </div>
-
-    <!-- Blocco 2: descrizione -->
+    <!-- Blocco 2: DESCRIZIONE -->
     <div class="glass-box">
       <p>
         Qui puoi scrivere una descrizione dettagliata del Blue Project.<br>
         Aggiungi testo, immagini, quello che vuoi!
       </p>
     </div>
-
-    <!-- Blocco 3: galleria immagini -->
+    <!-- Blocco 3: GALLERIA -->
     <div class="glass-box">
       <h3>Galleria</h3>
       <div class="gallery-row">
         <img src="images/img1.png" alt="img1">
         <img src="images/img2.png" alt="img2">
-        <!-- aggiungi altre immagini qui -->
+        <!-- altre immagini se vuoi -->
       </div>
     </div>
-
   </div>
 
-  <!-- SFONDO ANIMATO -->
   <script src="js/p5.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/mold.js"></script>
   <script src="js/sketch.js"></script>
 </body>
+</html>
+
 
