--- a/index.html
+++ b/index.html
@@ -109,6 +109,30 @@
       </a>
     </div>
   </div>
+    
+    <div class="row one-bottom">
+  <!-- Colonna 7 -->
+  <div class="four columns project-card">
+    <a href="project7.html">
+      <img src="images/purple.png" class="scale-with-grid">
+      <h5>Purple Project</h5>
+    </a>
+  </div>
+  <!-- Colonna 8 -->
+  <div class="four columns project-card">
+    <a href="project8.html">
+      <img src="images/orange.png" class="scale-with-grid">
+      <h5>Orange Project</h5>
+    </a>
+  </div>
+  <!-- Colonna 9 -->
+  <div class="four columns project-card">
+    <a href="project9.html">
+      <img src="images/grey.png" class="scale-with-grid">
+      <h5>Grey Project</h5>
+    </a>
+  </div>
+</div>
 
   <div class="row one-bottom center">
     <p>©ARMAND LALA 2025</p>
