--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     <div class="four columns project-card">
       <a href="project1.html">
         <img src="images/blue.png" class="scale-with-grid">
-        <h5>Blue Project</h5>
+        <h5>OPULENT TILING</h5>
       </a>
     </div>
     <!-- Colonna 2 -->
     <div class="four columns project-card">
       <a href="project2.html">
         <img src="images/pink.png" class="scale-with-grid">
-        <h5>Pink Project</h5>
+        <h5>▲ ◼</h5>
       </a>
     </div>
     <!-- Colonna 3 -->
