--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="four columns project-card">
       <a href="project3.html">
         <img src="images/yellow.png" class="scale-with-grid">
-        <h5>Yellow Project</h5>
+        <h5>MAZE</h5>
       </a>
     </div>
   </div>
