--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
     <div class="four columns project-card">
       <a href="project5.html">
         <img src="images/brown.png" class="scale-with-grid">
-        <h5>Brown Project</h5>
+        <h5>URBAN MYCELIUM</h5>
       </a>
     </div>
     <!-- Colonna 6 -->
     <div class="four columns project-card">
       <a href="project6.html">
         <img src="images/green.png" class="scale-with-grid">
-        <h5>Green Project</h5>
+        <h5>HYPNO SPIRAL</h5>
       </a>
     </div>
   </div>
@@ -115,21 +115,21 @@
   <div class="four columns project-card">
     <a href="project7.html">
       <img src="images/purple.png" class="scale-with-grid">
-      <h5>Purple Project</h5>
+      <h5>SUNFLOWER</h5>
     </a>
   </div>
   <!-- Colonna 8 -->
   <div class="four columns project-card">
     <a href="project8.html">
       <img src="images/orange.png" class="scale-with-grid">
-      <h5>Orange Project</h5>
+      <h5>LOCATION OF A CIRCLE</h5>
     </a>
   </div>
   <!-- Colonna 9 -->
   <div class="four columns project-card">
     <a href="project9.html">
       <img src="images/grey.png" class="scale-with-grid">
-      <h5>Grey Project</h5>
+      <h5>DYNAMIC QUAD-SPLIT METER</h5>
     </a>
   </div>
 </div>
