--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8"> 
-  <title>Blue Project | A L</title>
+  <title>OPULENT TILING | A L</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
