--- a/project1.html
+++ b/project1.html
@@ -30,7 +30,7 @@
   <div class="project-glass-wrapper">
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
-      <h1>Blue Project</h1>
+      <h1>OPULENT TILING</h1>
       <div class="cover-row">
         <img src="images/blue.png" alt="Blue Project" class="cover-img">
         <div class="cover-icons">
