--- a/project1.html
+++ b/project1.html
@@ -34,10 +34,10 @@
       <div class="cover-row">
         <img src="images/blue.png" alt="Blue Project" class="cover-img">
         <div class="cover-icons">
-          <a href="LINK_AL_JS" target="_blank" title="Vai al progetto JS" class="icon-btn">
+          <a href="https://editor.p5js.org/armand.lala0/sketches/Hqx9ch5ia" target="_blank" title="Vai al progetto JS" class="icon-btn">
             <span class="icon-js">JS*</span>
           </a>
-          <a href="docs/blue-project.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
+          <a href="docs/project1.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
             <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
               <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
               <path d="M8 6h4M8 10h4M8 14h4"/>
@@ -61,8 +61,11 @@ Overall, this sketch combines randomization, interaction, and color theory to pr
     <div class="glass-box">
       <h3>Galleria</h3>
       <div class="gallery-row">
-        <img src="images/img1.png" alt="img1">
-        <img src="images/img2.png" alt="img2">
+        <img src="images/project_1/1.png" alt="img1">
+        <img src="images/project_1/2.png" alt="img2">
+        <img src="images/project_1/3.png" alt="img3">
+        <img src="images/project_1/4.png" alt="img4">
+        <img src="images/project_1/1.gif" alt="img1">
         <!-- altre immagini se vuoi -->
       </div>
     </div>
