--- a/project1.html
+++ b/project1.html
@@ -31,20 +31,23 @@
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
       <h1>OPULENT TILING</h1>
-      <div class="cover-row">
-        <img src="images/blue.png" alt="Blue Project" class="cover-img">
-        <div class="cover-icons">
-          <a href="https://editor.p5js.org/armand.lala0/sketches/Hqx9ch5ia" target="_blank" title="Vai al progetto JS" class="icon-btn">
-            <span class="icon-js">JS*</span>
-          </a>
-          <a href="docs/project1.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
-            <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
-              <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
-              <path d="M8 6h4M8 10h4M8 14h4"/>
-            </svg>
-          </a>
-        </div>
-      </div>
+     <div class="cover-row">
+  <div class="cover-img-wrap">
+    <img src="images/blue.png" alt="Blue Project" class="cover-img">
+  </div>
+  <div class="cover-icons">
+    <a href="https://editor.p5js.org/armand.lala0/sketches/Hqx9ch5ia" target="_blank" title="Vai al progetto JS" class="icon-btn">
+      <span class="icon-js">JS*</span>
+    </a>
+    <a href="docs/project1.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
+      <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
+        <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
+        <path d="M8 6h4M8 10h4M8 14h4"/>
+      </svg>
+    </a>
+  </div>
+</div>
+
     </div>
     <!-- Blocco 2: DESCRIZIONE -->
     <div class="glass-box">
@@ -61,11 +64,11 @@ Overall, this sketch combines randomization, interaction, and color theory to pr
     <div class="glass-box">
       <h3>Galleria</h3>
       <div class="gallery-row">
-        <img src="images/project_1/1.png" alt="img1">
-        <img src="images/project_1/2.png" alt="img2">
-        <img src="images/project_1/3.png" alt="img3">
-        <img src="images/project_1/4.png" alt="img4">
-        <img src="images/project_1/1.gif" alt="img1">
+        <img src="images/project_1/1.png" alt="img1" class="gallery-img">
+        <img src="images/project_1/2.png" alt="img2" class="gallery-img">
+        <img src="images/project_1/3.png" alt="img3" class="gallery-img">
+        <img src="images/project_1/4.png" alt="img4" class="gallery-img">
+        <img src="images/project_1/1.gif" alt="img1" class="gallery-img">
         <!-- altre immagini se vuoi -->
       </div>
     </div>
@@ -75,6 +78,24 @@ Overall, this sketch combines randomization, interaction, and color theory to pr
   <script src="js/p5.sound.min.js"></script>
   <script src="js/mold.js"></script>
   <script src="js/sketch.js"></script>
+
+  <!-- POPUP OVERLAY -->
+<div id="img-popup" style="display:none;position:fixed;z-index:10000;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.77);justify-content:center;align-items:center;">
+  <img id="img-popup-big" src="" style="max-width:90vw;max-height:85vh;border-radius:14px;box-shadow:0 6px 32px rgba(60,60,80,0.16);border:3px solid #fff;">
+</div>
+<script>
+  document.querySelectorAll('.gallery-img').forEach(img => {
+    img.style.cursor = "pointer";
+    img.onclick = function() {
+      document.getElementById('img-popup-big').src = img.src;
+      document.getElementById('img-popup').style.display = 'flex';
+    }
+  });
+  document.getElementById('img-popup').onclick = function() {
+    this.style.display = 'none';
+  }
+</script>
+
 </body>
 </html>
 
