--- a/project1.html
+++ b/project1.html
@@ -39,7 +39,7 @@
     <a href="https://editor.p5js.org/armand.lala0/sketches/Hqx9ch5ia" target="_blank" title="Vai al progetto JS" class="icon-btn">
       <span class="icon-js">JS*</span>
     </a>
-    <a href="docs/project1.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
+    <a href="doc/project1.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
       <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
         <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
         <path d="M8 6h4M8 10h4M8 14h4"/>
