--- a/project1.html
+++ b/project1.html
@@ -30,7 +30,7 @@
   <div class="project-glass-wrapper">
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
-  <div class="cover-top-row">
+  <div class="cover-head">
     <h1 class="cover-title">OPULENT TILING</h1>
     <div class="cover-icons">
       <a href="https://editor.p5js.org/armand.lala0/sketches/Hqx9ch5ia" target="_blank" title="Vai al progetto JS" class="icon-btn">
