--- a/project1.html
+++ b/project1.html
@@ -72,6 +72,11 @@ Overall, this sketch combines randomization, interaction, and color theory to pr
     </div>
   </div>
 
+    <div class="row one-bottom center">
+    <p>©ARMAND LALA 2025</p>
+  </div>
+</div>
+  
   <script src="js/p5.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/mold.js"></script>
