--- a/project1.html
+++ b/project1.html
@@ -60,7 +60,7 @@ Overall, this sketch combines randomization, interaction, and color theory to pr
     </div>
     <!-- Blocco 3: GALLERIA -->
     <div class="glass-box">
-      <h3>Galleria</h3>
+      <h3>IMAGE GALLERY</h3>
       <div class="gallery-row">
         <img src="images/project_1/1.png" alt="img1" class="gallery-img">
         <img src="images/project_1/2.png" alt="img2" class="gallery-img">
