--- a/project2.html
+++ b/project2.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8"> 
-  <title>Blue Project | A L</title>
+  <title>▲ ◼ | A L</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -30,45 +30,78 @@
   <div class="project-glass-wrapper">
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
-      <h1>Blue Project</h1>
-      <div class="cover-row">
-        <img src="images/blue.png" alt="Blue Project" class="cover-img">
-        <div class="cover-icons">
-          <a href="LINK_AL_JS" target="_blank" title="Vai al progetto JS" class="icon-btn">
-            <span class="icon-js">JS*</span>
-          </a>
-          <a href="docs/blue-project.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
-            <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
-              <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
-              <path d="M8 6h4M8 10h4M8 14h4"/>
-            </svg>
-          </a>
-        </div>
-      </div>
+  <div class="cover-head">
+    <h1 class="cover-title">▲ ◼</h1>
+    <div class="cover-icons">
+      <a href="https://editor.p5js.org/armand.lala0/sketches/ssoXl-0W7" target="_blank" title="Vai al progetto JS" class="icon-btn">
+        <span class="icon-js">JS*</span>
+      </a>
+      <a href="doc/project2.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
+        <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
+          <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
+          <path d="M8 6h4M8 10h4M8 14h4"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+  <img src="images/blue.png" alt="Blue Project" class="cover-img">
+
     </div>
     <!-- Blocco 2: DESCRIZIONE -->
     <div class="glass-box">
       <p>
-        Qui puoi scrivere una descrizione dettagliata del Blue Project.<br>
-        Aggiungi testo, immagini, quello che vuoi!
+        This code creates a dynamic, interactive fractal generator using either squares or triangles, depending on user selection. The visual logic and recursive pattern are inspired by “Recursive Triangle” by Hiraga (link), adapted and extended here to allow both square and triangle tilings with interactive controls. At its core, the script recursively draws grids of either deformed squares or tessellated equilateral triangles, each filled with a complex "frame" pattern created through recursive subdivision.
+The process started by playing with a code base that allowed me to see the workings and logic behind fractal generation. (link)
+Upon startup, the program defines key global variables such as frac (which sets the recursion depth), scaleX (which determines the deformation of the fractal's inner shapes), and shapeType (which toggles between 'square' and 'triangle' modes via GUI buttons). The canvas is sized to fit the browser window, with color and style settings established in setup(). GUI elements are built with createGUI(), letting users increase or decrease the fractal depth (frac) and switch between square and triangle tilings in real time.
+The function setGridParams() calculates the geometry and centering offsets (offsetX, offsetY) needed to fill the canvas with a uniform grid, adjusting for the chosen shape. For squares, the grid is built by fitting a set number of rows (nRows) vertically, then filling horizontally. For triangles, the algorithm computes the side length so that the desired number of triangle rows fits vertically, and then arranges the triangles in a honeycomb pattern, shifting every other row by half a cell for tight tiling.
+The run() function clears the canvas and triggers the main drawing process, calling either the square or triangle rendering logic as needed. For squares, nested loops fill the canvas with deformed squares, each recursively subdivided using drawDeformedSquare(). This function creates a "frame" by drawing both the outer and inner square at each recursion, and then fills the gaps with smaller triangles drawn via drawRecursiveTriangle(). The recursion continues until the base case, which simply draws the innermost shape.
+For triangles, the drawAllTriangles() function covers the canvas with alternating upward- and downward-pointing equilateral triangles. Each triangle is recursively drawn using drawDeformedTriangle(), which works analogously to the square version, generating inner and outer triangles and recursively subdividing the pattern.
+User interaction is seamless: moving the mouse horizontally alters the scaleX value, dynamically changing the deformation of each fractal layer (mouseMoved()), while resizing the window re-triggers the drawing to keep the pattern centered (windowResized()). All code is modular and clearly divided by function, making it easy to extend with new features or shapes in the future. Overall, this code is a concise and flexible demonstration of recursive geometric art, combining mathematical rigor with interactive aesthetics.
       </p>
     </div>
     <!-- Blocco 3: GALLERIA -->
     <div class="glass-box">
-      <h3>Galleria</h3>
+      <h3>IMAGE GALLERY</h3>
       <div class="gallery-row">
-        <img src="images/img1.png" alt="img1">
-        <img src="images/img2.png" alt="img2">
+        <img src="images/project_2/1.png" alt="img1" class="gallery-img">
+        <img src="images/project_2/2.png" alt="img2" class="gallery-img">
+        <img src="images/project_2/3.png" alt="img3" class="gallery-img">
+        <img src="images/project_2/4.png" alt="img4" class="gallery-img">
+        <img src="images/project_2/4.png" alt="img5" class="gallery-img">
+        <img src="images/project_2/4.png" alt="img6" class="gallery-img">
+        <img src="images/project_2/4.png" alt="img7" class="gallery-img">
+        <img src="images/project_2/4.png" alt="img8" class="gallery-img">
         <!-- altre immagini se vuoi -->
       </div>
     </div>
   </div>
 
+    <div class="row one-bottom center">
+    <p>©ARMAND LALA 2025</p>
+  </div>
+</div>
+  
   <script src="js/p5.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/mold.js"></script>
   <script src="js/sketch.js"></script>
+
+  <!-- POPUP OVERLAY -->
+<div id="img-popup" style="display:none;position:fixed;z-index:10000;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.77);justify-content:center;align-items:center;">
+  <img id="img-popup-big" src="" style="max-width:90vw;max-height:85vh;border-radius:14px;box-shadow:0 6px 32px rgba(60,60,80,0.16);border:3px solid #fff;">
+</div>
+<script>
+  document.querySelectorAll('.gallery-img').forEach(img => {
+    img.style.cursor = "pointer";
+    img.onclick = function() {
+      document.getElementById('img-popup-big').src = img.src;
+      document.getElementById('img-popup').style.display = 'flex';
+    }
+  });
+  document.getElementById('img-popup').onclick = function() {
+    this.style.display = 'none';
+  }
+</script>
+
 </body>
 </html>
-
-
