--- a/project2.html
+++ b/project2.html
@@ -44,7 +44,7 @@
       </a>
     </div>
   </div>
-  <img src="images/blue.png" alt="Blue Project" class="cover-img">
+  <img src="images/pink.png" alt="Blue Project" class="cover-img">
 
     </div>
     <!-- Blocco 2: DESCRIZIONE -->
