--- a/project4.html
+++ b/project4.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8"> 
-  <title>Blue Project | A L</title>
+  <title>▲ ◼ ⏺ | A L</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -30,45 +30,126 @@
   <div class="project-glass-wrapper">
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
-      <h1>Blue Project</h1>
-      <div class="cover-row">
-        <img src="images/blue.png" alt="Blue Project" class="cover-img">
-        <div class="cover-icons">
-          <a href="LINK_AL_JS" target="_blank" title="Vai al progetto JS" class="icon-btn">
-            <span class="icon-js">JS*</span>
-          </a>
-          <a href="docs/blue-project.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
-            <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
-              <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
-              <path d="M8 6h4M8 10h4M8 14h4"/>
-            </svg>
-          </a>
-        </div>
-      </div>
+  <div class="cover-head">
+    <h1 class="cover-title">▲ ◼</h1>
+    <div class="cover-icons">
+      <a href="https://editor.p5js.org/armand.lala0/sketches/v8aOiyciu" target="_blank" title="Vai al progetto JS" class="icon-btn">
+        <span class="icon-js">JS*</span>
+      </a>
+      <a href="doc/project4.pdf" target="_blank" download title="Scarica PDF" class="icon-btn">
+        <svg height="20" width="20" viewBox="0 0 20 20" fill="none" stroke="white" stroke-width="2">
+          <rect x="4" y="2" width="12" height="16" rx="2" fill="none"/>
+          <path d="M8 6h4M8 10h4M8 14h4"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+  <img src="images/red.png" alt="Blue Project" class="cover-img">
+
     </div>
     <!-- Blocco 2: DESCRIZIONE -->
     <div class="glass-box">
-      <p>
-        Qui puoi scrivere una descrizione dettagliata del Blue Project.<br>
-        Aggiungi testo, immagini, quello che vuoi!
-      </p>
+      <p>The program uses p5.js to create an interactive and dynamic composition of randomly generated shapes (circles, squares, and triangles) on the screen. The background is set to white only once inside the setup() function (background(255);), so all new shapes are drawn on top of previous ones and accumulate over time, creating an abstract visual effect.
+In the setup() block, the code initializes the canvas to fill the browser window (createCanvas(windowWidth, windowHeight);) and ensures that rectangles and ellipses are drawn from their center (rectMode(CENTER); and ellipseMode(CENTER);). The default stroke is removed with noStroke(); so shapes do not have a border by default.
+The core drawing logic happens in the draw() function, which is called repeatedly by p5.js (about 60 times per second). Each time draw() executes, the code first chooses a random position on the canvas by generating values for x and y using random(width) and random(height). It then determines a random size for the next shape with let size = random(30, 120);, so each shape appears in a variety of dimensions.
+Next, the program sets a random fill color with some transparency: fill(random(255), random(255), random(255), random(70, 170));. The four arguments correspond to red, green, blue, and alpha (opacity), with alpha ensuring that overlapping shapes create interesting blends.
+The type of shape to draw is decided randomly as well: let shapeType = floor(random(3));. This produces either 0 (ellipse), 1 (rectangle), or 2 (triangle).
+If shapeType === 0, the code draws a circle at the chosen position and size with ellipse(x, y, size, size);.
+
+
+If shapeType === 1, it draws a square using rect(x, y, size, size);, centered at (x, y).
+
+
+If shapeType === 2, the code calculates the height for an equilateral triangle and draws the triangle using the triangle() function. The coordinates are calculated so that the triangle is centered at (x, y).
+
+
+Because the background is only set in setup() and not redrawn in draw(), shapes accumulate and overlap, resulting in a lively, evolving, and colorful abstract image. Transparency and random choices for position, size, and color make every composition unique and unpredictable, giving the sketch a playful and artistic character.
+         </p>
     </div>
     <!-- Blocco 3: GALLERIA -->
     <div class="glass-box">
-      <h3>Galleria</h3>
+      <h3>IMAGE GALLERY</h3>
       <div class="gallery-row">
-        <img src="images/img1.png" alt="img1">
-        <img src="images/img2.png" alt="img2">
+        <img src="images/project_4/1.png" alt="img1" class="gallery-img">
+        <img src="images/project_4/2.png" alt="img2" class="gallery-img">
+        <img src="images/project_4/3.png" alt="img3" class="gallery-img">
+        <img src="images/project_4/4.png" alt="img4" class="gallery-img">
+        <img src="images/project_4/5.png" alt="img5" class="gallery-img">
         <!-- altre immagini se vuoi -->
       </div>
     </div>
   </div>
 
+    <div class="row one-bottom center">
+    <p>©ARMAND LALA 2025</p>
+  </div>
+</div>
+  
   <script src="js/p5.js"></script>
   <script src="js/p5.sound.min.js"></script>
   <script src="js/mold.js"></script>
   <script src="js/sketch.js"></script>
+
+  <!-- POPUP OVERLAY -->
+<div id="img-popup" style="display:none;position:fixed;z-index:10000;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.77);justify-content:center;align-items:center;">
+  <span id="popup-prev" class="popup-arrow" aria-label="Precedente">&lt;</span>
+  <img id="img-popup-big" src="" style="max-width:90vw;max-height:85vh;border-radius:14px;box-shadow:0 6px 32px rgba(60,60,80,0.16);border:3px solid #fff;">
+  <span id="popup-next" class="popup-arrow" aria-label="Successiva">&gt;</span>
+</div>
+
+<script>
+const images = Array.from(document.querySelectorAll('.gallery-img'));
+let currentIndex = 0;
+
+function showPopup(index) {
+  if(index < 0 || index >= images.length) return;
+  currentIndex = index;
+  document.getElementById('img-popup-big').src = images[currentIndex].src;
+  document.getElementById('img-popup').style.display = 'flex';
+}
+
+images.forEach((img, idx) => {
+  img.style.cursor = "pointer";
+  img.onclick = function(e) {
+    e.stopPropagation();
+    showPopup(idx);
+  }
+});
+
+function closePopup() {
+  document.getElementById('img-popup').style.display = 'none';
+}
+
+document.getElementById('img-popup').onclick = closePopup;
+
+document.getElementById('popup-prev').onclick = function(e) {
+  e.stopPropagation();
+  showPopup((currentIndex - 1 + images.length) % images.length);
+};
+document.getElementById('popup-next').onclick = function(e) {
+  e.stopPropagation();
+  showPopup((currentIndex + 1) % images.length);
+};
+
+// Tastiera: ← (37), → (39), ESC (27)
+document.addEventListener('keydown', function(e) {
+  if(document.getElementById('img-popup').style.display === 'flex') {
+    if(e.key === 'ArrowLeft') {
+      showPopup((currentIndex - 1 + images.length) % images.length);
+      e.preventDefault();
+    }
+    if(e.key === 'ArrowRight') {
+      showPopup((currentIndex + 1) % images.length);
+      e.preventDefault();
+    }
+    if(e.key === 'Escape') {
+      closePopup();
+      e.preventDefault();
+    }
+  }
+});
+</script>
+
+
 </body>
 </html>
-
-
