--- a/project4.html
+++ b/project4.html
@@ -31,7 +31,7 @@
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
   <div class="cover-head">
-    <h1 class="cover-title">▲ ◼</h1>
+    <h1 class="cover-title">▲ ◼ ⏺</h1>
     <div class="cover-icons">
       <a href="https://editor.p5js.org/armand.lala0/sketches/v8aOiyciu" target="_blank" title="Vai al progetto JS" class="icon-btn">
         <span class="icon-js">JS*</span>
