--- a/project9.html
+++ b/project9.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8"> 
-  <title>DYNAMIC QUAD-SPLIT METER  | A L</title>
+  <title>QUAD-SPLIT METER  | A L</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -31,7 +31,7 @@
     <!-- Blocco 1: COPERTINA -->
     <div class="glass-box">
   <div class="cover-head">
-    <h1 class="cover-title">DYNAMIC QUAD-SPLIT METER </h1>
+    <h1 class="cover-title">QUAD-SPLIT METER </h1>
     <div class="cover-icons">
       <a href="https://editor.p5js.org/armand.lala0/sketches/XBrKuMehq" target="_blank" title="Vai al progetto JS" class="icon-btn">
         <span class="icon-js">JS*</span>
