--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </a>
   </div>
   <div class="navbar-right">
-    <a href="ABOUT.html">ABOUT</a>
+    <a href="about.html">ABOUT</a>
     <a href="#contacts">CONTACTS</a>
     <a href="#projects">PROJECTS</a>
   </div>
