--- a/about.html
+++ b/about.html
@@ -57,5 +57,11 @@
       </p>
     </div>
   </div>
+  <!-- Al fondo di about.html -->
+<script src="js/p5.js"></script>
+<script src="js/p5.sound.min.js"></script>
+<script src="js/mold.js"></script>
+<script src="js/sketch.js"></script>
+
 </body>
 </html>
