--- a/index.html
+++ b/index.html
@@ -33,10 +33,24 @@
     </a>
   </div>
   <div class="navbar-right">
-    <a href="about.html">ABOUT</a>
-    <a href="#contacts">CONTACTS</a>
-    <a href="#projects">PROJECTS</a>
+  <a href="about.html">ABOUT</a>
+  <a href="contacts.html">CONTACTS</a>
+  <div class="dropdown">
+    <a href="#" class="dropbtn">PROJECTS</a>
+    <div class="dropdown-content">
+      <a href="project1.html">OPULENT TILING</a>
+      <a href="project2.html">▲ ◼</a>
+      <a href="project3.html">MAZE</a>
+      <a href="project4.html">▲ ◼ ⏺</a>
+      <a href="project5.html">URBAN MYCELIUM</a>
+      <a href="project6.html">HYPNO SPIRAL</a>
+      <a href="project7.html">SUNFLOWER</a>
+      <a href="project8.html">LOCATION OF A CIRCLE</a>
+      <a href="project9.html">DYNAMIC QUAD-SPLIT METER</a>
+    </div>
   </div>
+</div>
+
 </nav>
 <!-- NAVBAR END -->
 
