--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </svg>
     </a>
   </div>
-  <div class="navbar-right">
+ <div class="navbar-right">
   <a href="about.html">ABOUT</a>
   <a href="contacts.html">CONTACTS</a>
   <div class="dropdown">
-    <a href="#" class="dropbtn">PROJECTS</a>
+    <a class="dropbtn" href="#">PROJECTS</a>
     <div class="dropdown-content">
       <a href="project1.html">OPULENT TILING</a>
       <a href="project2.html">▲ ◼</a>
