--- a/project5.html
+++ b/project5.html
@@ -11,21 +11,38 @@
   <link rel="stylesheet" href="css/customize.css">
 </head>
 <body>
-  <!-- NAVBAR -->
-  <nav class="navbar">
-    <div class="navbar-left">
-      <a href="index.html" class="navbar-home" title="Home">
-        <svg width="24" height="24" fill="white" viewBox="0 0 24 24">
-          <path d="M3 11l9-9 9 9h-2v8a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-8H3z" stroke="white" stroke-width="2" fill="none"/>
-        </svg>
-      </a>
-    </div>
-    <div class="navbar-right">
-      <a href="#about">ABOUT</a>
-      <a href="#contacts">CONTACTS</a>
-      <a href="#projects">PROJECTS</a>
-    </div>
-  </nav>
+  <!-- NAVBAR START -->
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="index.html" class="navbar-home" title="Home">
+      <!-- Casetta in SVG: puoi cambiare la dimensione (width/height) -->
+      <svg width="24" height="24" fill="white" viewBox="0 0 24 24" style="vertical-align: middle;">
+        <path d="M3 11l9-9 9 9h-2v8a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-8H3z" stroke="white" stroke-width="2" fill="none"/>
+      </svg>
+    </a>
+  </div>
+ <div class="navbar-right">
+  <a href="about.html">ABOUT</a>
+  <a href="contacts.html">CONTACTS</a>
+  <div class="dropdown">
+  <a href="#" class="dropbtn">PROJECTS</a>
+  <div class="dropdown-content">
+    <a href="project1.html">OPULENT TILING</a>
+    <a href="project2.html">▲ ◼</a>
+    <a href="project3.html">MAZE</a>
+    <a href="project4.html">▲ ◼ ⏺</a>
+    <a href="project5.html">URBAN MYCELIUM</a>
+    <a href="project6.html">HYPNO SPIRAL</a>
+    <a href="project7.html">SUNFLOWER</a>
+    <a href="project8.html">LOCATION OF A CIRCLE</a>
+    <a href="project9.html">DYNAMIC QUAD-SPLIT METER</a>
+  </div>
+</div>
+
+</div>
+
+</nav>
+<!-- NAVBAR END -->
   
   <div class="project-glass-wrapper">
     <!-- Blocco 1: COPERTINA -->
