--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
   <div class="about-cover-text">
     <h1 class="cover-title" style="font-size:2.8em; text-align:left; margin-bottom:12px;">ARMAND LALA</h1>
     <div style="font-size: 1.38em; font-weight: 500; color: #fff;">
-      qui testo descrittivo copertina
+      Master’s degree student in Architecture at the University of Florence (UNIFI) and Erasmus student at NTUA Athens.
     </div>
   </div>
 </div>
@@ -64,20 +64,20 @@
     <div class="glass-box">
       <p style="font-size:1.36em;">
         <!-- Sostituisci qui sotto con il testo di presentazione che vuoi -->
-        Benvenutə su <b>Opulent Tiling</b>! Questo sito raccoglie progetti, esperimenti visivi e ricerche legate a grafica generativa, programmazione creativa, e design computazionale.  
+        Welcome to my website! This site showcases projects, visual experiments, and research related to generative graphics, creative coding, and computational design.  
         <br><br>
-        Sono <b>Armand Lala</b> e questo è il mio spazio per esplorare algoritmi, pattern visivi e contaminazioni tra arte digitale, coding e geometria.  
+        I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.
         <br><br>
         <b>Su questo sito trovi:</b>
         <ul style="text-align:left; max-width:560px; margin:20px auto 0 auto;">
-          <li>Sketch generativi scritti in p5.js</li>
-          <li>Analisi e commenti sui processi creativi</li>
-          <li>Piccole gallerie di immagini/gif</li>
-          <li>PDF e materiali scaricabili</li>
-          <li>Link utili e contatti</li>
+          <li>Generative sketches written in p5.js</li>
+          <li>Analyses and commentary on creative processes</li>
+          <li>Small galleries of images/gifs</li>
+          <li>Downloadable PDFs and materials</li>
+          <li>Useful links and contacts</li> </ul>
         </ul>
         <br>
-        Se vuoi saperne di più o collaborare, <b>scrivimi!</b>
+        If you want to know more, <b>get in touch!</b>
       </p>
     </div>
   </div>
