--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
         <br><br>
         I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.
         <br><br>
-        <b>Su questo sito trovi:</b>
+        <b>On this site you will find:</b>
         <ul style="text-align:left; max-width:560px; margin:20px auto 0 auto;">
           <li>Generative sketches written in p5.js</li>
           <li>Analyses and commentary on creative processes</li>
