--- a/project6.html
+++ b/project6.html
@@ -61,7 +61,7 @@
       </a>
     </div>
   </div>
-  <img src="images/green.png" alt="Blue Project" class="cover-img">
+  <img src="images/project_6/3.gif" alt="Blue Project" class="cover-img">
 
     </div>
     <!-- Blocco 2: DESCRIZIONE -->
