--- a/about.html
+++ b/about.html
@@ -80,6 +80,11 @@
         If you want to know more, <b>get in touch!</b>
       </p>
     </div>
+
+   <div class="row one-bottom center">
+    <p>©ARMAND LALA 2025</p>
+  </div>
+  
   </div>
   <!-- Al fondo di about.html -->
 <script src="js/p5.js"></script>
